HBASE-19079 Support setting up two clusters with A and S stat